force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_AGREEMENTS_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_AGREEMENTS_VIEW</externalName>
    <label>Case Agreements</label>
    <pluralLabel>Case Agreements</pluralLabel>
</CustomObject>