force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/AGREEMENT_CASE_PCT__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_CASE_PCT__c</fullName>
    <description>AGREEMENT_CASE_PCT</description>
    <externalDeveloperName>AGREEMENT_CASE_PCT</externalDeveloperName>
    <label>Case %</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>