force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/CASE_AGREEMENT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CASE_AGREEMENT_STATUS__c</fullName>
    <description>CASE_AGREEMENT_STATUS</description>
    <externalDeveloperName>CASE_AGREEMENT_STATUS</externalDeveloperName>
    <label>CASE_AGREEMENT_STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>