force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/CASE_UPDATE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CASE_UPDATE_FLAG__c</fullName>
    <description>Case Update Flag</description>
    <externalDeveloperName>CASE_UPDATE_FLAG</externalDeveloperName>
    <label>Case Update Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>