force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/COMMENT_ID__c.field-meta.xml
<CustomField>
    <fullName>COMMENT_ID__c</fullName>
    <description>COMMENT_ID</description>
    <externalDeveloperName>COMMENT_ID</externalDeveloperName>
    <label>Comment</label>
    <length>81</length>
    <referenceTo>Forrester_SHIR_AGR_CASE_COMMENT__x</referenceTo>
    <relationshipLabel>Forrester_SHIR_CASE_AGREEMENTS_VIEW</relationshipLabel>
    <relationshipName>Comment</relationshipName>
    <type>ExternalLookup</type>
</CustomField>