force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <description>END_DATE</description>
    <externalDeveloperName>END_DATE</externalDeveloperName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>