force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/LICENSEE_RECID__c.field-meta.xml
<CustomField>
    <fullName>LICENSEE_RECID__c</fullName>
    <description>LICENSEE_RECID</description>
    <externalDeveloperName>LICENSEE_RECID</externalDeveloperName>
    <label>Licensee RecId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>