force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/SETTLEMENT_PCT__c.field-meta.xml
<CustomField>
    <fullName>SETTLEMENT_PCT__c</fullName>
    <description>SETTLEMENT_PCT</description>
    <externalDeveloperName>SETTLEMENT_PCT</externalDeveloperName>
    <label>Settlement</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>