force-app/main/default/objects/Forrester_SHIR_CASE_AGREEMENTS_VIEW__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>Case Status</description>
    <externalDeveloperName>STATUS</externalDeveloperName>
    <label>Status Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>